# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/runtime_core/static_core/ark_config.gni")

ohos_prebuilt_etc("RuntimeEnableDebugger.para") {
  source = "$ark_root/runtime/para/RuntimeEnableDebugger.para"
  part_name = "runtime_core"
  subsystem_name = "arkcompiler"
  module_install_dir = "etc/param"
}

ohos_prebuilt_etc("RuntimeEnableDebugger.para.dac") {
  source = "$ark_root/runtime/para/RuntimeEnableDebugger.para.dac"
  part_name = "runtime_core"
  subsystem_name = "arkcompiler"
  module_install_dir = "etc/param"
}